基础库添加新功能：检测CBS版本

--- a/FluentWinver/MainWindow.xaml
+++ b/FluentWinver/MainWindow.xaml
@@ -77,6 +77,7 @@
                                     <TextBlock x:Name="OSBuildVersionBlock" FontSize="15" IsTextSelectionEnabled="True"/>
                                     <TextBlock x:Name="OSArchBlock" FontSize="15" IsTextSelectionEnabled="True"/>
                                     <TextBlock x:Name="OSExpirationTimeBlock" FontSize="15" IsTextSelectionEnabled="True"/>
+                                    <TextBlock x:Name="ExperienceBlock" FontSize="15" IsTextSelectionEnabled="True"/>
                                 </StackPanel>
                             </StackPanel>
                         </StackPanel>
